# BungerLogic

./: README.md  pyproject.toml
src/BungerLogic/: equity_calcs.py  formulas.py  margin_calcs.py  performance_calcs.py  status_calcs.py
